docs: 전체 수신자 리스트 조회 swagger api 이동
